# s3-bucket-tool

./: .gitignore  README.md  pyproject.toml
s3_bucket_tool/: main.py
s3_bucket_tool/src/buckets/api/: bucket_api.py
s3_bucket_tool/src/buckets/api/mappers/: bucket_mapper.py
s3_bucket_tool/src/buckets/domain/: bucket.py  bucket_repository.py  enums.py  format.py  unit_converter.py
s3_bucket_tool/src/buckets/infra/: s3_bucket_repository.py
s3_bucket_tool/src/buckets/services/: bucket_getter.py
tests/buckets/api/mappers/: test_bucket_mapper.py
tests/buckets/domain/: test_bucket.py  test_unit_converter.py
tests/buckets/services/: test_bucket_getter.py
