[tool.poetry]
name = "s3-bucket-tool"
version = "0.1.0"
description = ""
packages = [{include = "s3_bucket_tool"}]
authors = ["Gabriel Simard <gabriel.simard.4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.7"
boto3-stubs = { extras = ["s3"], version = "^1.19.7" }
typer = "^0.4.0"
pytz = "^2021.3"
tabulate = "^0.8.9"
lazy-table = "^0.2.1"
aioboto3 = "^13.1.0"

[tool.poetry.scripts]
cli = "s3_bucket_tool.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
